fix: home page horizontal scroll bar

--- a/src/pages/home/homePage.scss
+++ b/src/pages/home/homePage.scss
@@ -6,7 +6,7 @@
   @include flex-v;
 
   align-items: center;
-  overflow-y: hidden;
+  overflow: hidden;
 
   .home-header {
     display: flex;
